# git-vsc-practice

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
new_project_forest/: __init__.py  dataset.py  features.py  plots.py  test.py
new_project_forest/modeling/: predict.py  train.py
